# config_manager

./: .pylintrc  Makefile  README.md  pyproject.toml
config_manager/: config_manager.py
