[project]
name = "config_manager"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
]

[project.scripts]
config_manager = "config_manager.config_manager:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.7",
]
